change networkid for local kubernetes ethereum network and rename scripts
1. The NETOWORKID parameter in the yaml files needed to be more unique
   and not just a ISO date value. Changed to a ten digit random number.
2. Renamed the start and shutdown scripts for the local Kubernetes
   cluster to `up` and `down` to save some typing.

expose tx-node on localhost:8545 via type LoadBalancer

To simplify testing with the Ethereum test cluster we now expose
the geth RPC port 8545 of the tx-node on localhost.

add gratuitous output of dashboard URL when booting the Ethereum cluster

add diagram showing interactions between Ethereum testnet components

add ignoring of keystore directory

add hostvolume support for DATADIR to save chain data

We want to be able to persist existing chain data in case pods
are recycled by Kubernetes. To do this we introduce a HOSTVOLUME
parameter that if set will be used to store chain data when geth
boots.

make number of Keep client accounts created a Docker build parameter

Depending on the number of Keep clients we want to run concurrently
attached to the Ethereum testnet we need to pregenerate a matching
number of accounts and prefund them. The Docker build command now
takes an integer parameter KEEP_ACCOUNTS that specifies the number
of accounts to create. Accounts are created and added to the genesis.json
file where they are then prefunded.

set ethash.dagdir to equal DATADIR when booting geth

We need to store the ethash DAG in the same location as other chain data
so we can manage all geth data on a persistent volume.

add support for parameterized directories in hostPath persistent volumes

To persist chain data on a local volume when running on Docker Desktop
or in the cloud we need to create sub-directories for each pod
instance in case we are writing to a shared volume.
We need to inform the bootNodeReporter about the changed path to
the IPC file that gives it access to geth via IPC.

Comma delimit each eth account object so that

--- a/docs/development/skaffold-managed-local-dev-environment.adoc
+++ b/docs/development/skaffold-managed-local-dev-environment.adoc
@@ -134,6 +134,80 @@ Whatever you choose make sure you're using version `v0.17.0` or
 higher.
 
 == Local Development
+=== Ethereum Testnet Components
+
+```
+
+ ╔═════════════════════════════════════════════════════════════════════════════════════════════════╗
+ ║                                                                                                 ║
+ ║                                     ┏━━━━━━━━━━━━━━━━━━━━━┓                                     ║
+ ║                                     ┃ ┌─────────────────┐ ┃                                     ║
+ ║                                     ┃ │                 │ ┃                                     ║
+ ║                     register        ┃ │    Boot Node    │ ┃           register                  ║
+ ║               ┌───────node──────────╋▶│    Registrar    │◀╋─────────────node─────┐              ║
+ ║               │                     ┃ │                 │ ┃                      │              ║
+ ║               │                     ┃ └─────────────────┘ ┃                      │              ║
+ ║               │                     ┃                     ┃                      │              ║
+ ║               │                     ┃                     ┃                      │              ║
+ ║               │                     ┃                     ┃                      │              ║
+ ║               │                     ┃                     ┃                      │              ║
+ ║               │                     ┃                     ┃                      │              ║
+ ║               │                     ┃                     ┃                      │              ║
+ ║               │                     ┃                     ┃                      │              ║
+ ║               │                     ┃ ┌─────────────────┐ ┃                      │              ║
+ ║               │                     ┃ │                 │ ┃                      │              ║
+ ║               │                     ┃ │  Eth-Netstats   │ ┃                      │              ║
+ ║               │               ┌─────╋▶│    Dashboard    │◀╋─────┐                │              ║
+ ║    ┏━━━━━━━━━━╋━━━━━━━━━━┓    │     ┃ │                 │ ┃     │     ┏━━━━━━━━━━╋━━━━━━━━━━┓   ║
+ ║    ┃          │          ┃    │     ┃ └─────────────────┘ ┃     │     ┃          │          ┃   ║
+ ║    ┃ ┌─────────────────┐ ┃    │     ┃                     ┃     │     ┃ ┌─────────────────┐ ┃   ║
+ ║    ┃ │                 │ ┃    │     ┃    Dashboard Pod    ┃     │     ┃ │                 │ ┃   ║
+ ║    ┃ │    Boot Node    │ ┃    │     ┗━━━━━━━━━━━━━━━━━━━━━┛     │     ┃ │    Boot Node    │ ┃   ║
+ ║    ┃ │    Reporter     │ ┃    │                                 │     ┃ │    Reporter     │ ┃   ║
+ ║    ┃ │                 │ ┃    │                                 │     ┃ │                 │ ┃   ║
+ ║    ┃ └─────────────────┘ ┃    │                                 │     ┃ └─────────────────┘ ┃   ║
+ ║    ┃                     ┃    │                              report   ┃                     ┃   ║
+ ║    ┃ ┌─────────────────┐ ┃ report                             node    ┃ ┌─────────────────┐ ┃   ║
+ ║    ┃ │                 │ ┃  node                             stats    ┃ │                 │ ┃   ║
+ ║    ┃ │    EthStats     │ ┃ stats                                │     ┃ │    EthStats     │ ┃   ║
+ ║    ┃ │       Api       │─╋────┘                                 └─────╋─│       Api       │ ┃   ║
+ ║    ┃ │                 │ ┃                                            ┃ │                 │ ┃   ║
+ ║    ┃ └────────▲────────┘ ┃                                            ┃ └────────▲────────┘ ┃   ║
+ ║    ┃          │          ┃                                            ┃          │          ┃   ║
+ ║    ┃          │          ┃                                            ┃          │          ┃   ║
+ ║    ┃          │          ┃                                            ┃          │          ┃   ║
+ ║    ┃ ┌────────┴────────┐ ┃                                            ┃ ┌────────┴────────┐ ┃   ║
+ ║    ┃ │                 │ ┃                                            ┃ │                 │ ┃   ║
+ ║    ┃ │      geth       │ ┃                 P2P                        ┃ │      geth       │ ┃   ║
+ ║    ┃ │                 │◀┃─ ─ ─ ─ ─ ─ ─ ─ block ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ╋▶│                 │ ┃   ║
+ ║    ┃ │                 │ ┃               updates                      ┃ │                 │ ┃   ║
+ ║    ┃ └─────────────────┘ ┃                                            ┃ └─────────────────┘ ┃   ║
+ ║    ┃                     ┃                                            ┃                     ┃   ║
+ ║    ┃      Miner Pod      ┃                                            ┃       TX Pod        ┃   ║
+ ║    ┗━━━━━━━━━━━━━━━━━━━━━┛                                            ┗━━━━━━━━━━━━━━━━━━━━━┛   ║
+ ║                                           Kubernetes                                            ║
+ ╚═════════════════════════════════════════════════════════════════════════════════════════════════╝
+```
+
+When we boot the testnet via Kubernetes it brings up a minimum of three pods.
+The `dashboard` pod presents a view of the Ethereum testnet with live nodes,
+block propagation times and other relevant stats. The `miner` pod mines new
+Ethereum blocks. The `tx` pod processes requests from clients via the geth API.
+
+Both `miner` and `tx` pods run a `bootNodeReporter` daemon that reports to the
+`bootNodeRegistrar` daemon that runs on the `dashboard` pod. Any new booting
+`miner` or `tx` pod will query the registrar on the `dashboard` pod for known
+addresses of `geth` peers. We don't use auto-discovery on our testnet.
+
+Both `miner` and `tx` pods run a `EthStatsApi` daemon that queries the local
+`geth` daemon for vital stats and reports those to the `EthNetstats` dashboard
+where they are displayed.
+
+All `miner` and `tx` pods also communicate with each other via P2P protocol
+and inform each other about new blocks.
+
+
+
 === Boot Ethereum Node Docker Container
 You will need to build the Docker container following
 the instructions in
@@ -155,15 +229,31 @@ If you want to just boot the Ethereum testnet cluster, you can do that without
 using Skaffold by running the start script:
 
 ```
-infrastructure/scripts/geth-startup.sh
+infrastructure/scripts/up
 ```
 
 To shutdown the testnet cluster:
 
 ```
-infrastructure/scripts/geth-shutdown.sh
+infrastructure/scripts/down
 ```
 
+==== Important Note
+The current setup supports Kubernetes PersistentVolume for chain data. To
+simplify setup we are only allowing one mining node and one tx node. They
+write to distinct subdirectories underneath `/tmp/k8-volumes` assuming that
+your Docker Desktop is configured to share `/tmp` with containers which is
+the default. The benefit of writing to PersistentVolumes in the test cluster
+is that you can retain chain data like deployed contracts between restarts and
+don't have to go through the full setup routing again.
+
+If you need to restart the chain from a clean slate you will have to manually
+delete the `/tmp/k8-volumes` directory and all subdirectories.
+
+If you don't care about preserving chain data and need to run more miner or
+tx nodes just comment out the definition of the `HOSTVOLUME` environment
+variable in the coresponding `yaml` file for miner and/or tx node. The pod
+will then fallback to ephemeral storage inside the container at boot time.
 
 === Develop Keep
 To start developing run the following command:
